tests/snapshots/stopped_scan_scanned_again@linux-d4096-s0.snap
---
source: tests/browse.rs
---
/stopped  44.0 KiB | scanned 0 s ago
   8.0 KiB  18.2% x0/                                          4.0 KiB  f
   8.0 KiB  18.2% x1/
   8.0 KiB  18.2% x2/
   8.0 KiB  18.2% x3/
   8.0 KiB  18.2% x4/












x0/ | 8.0 KiB  own 8.0 KiB
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  ? help  q quit
--- styles ---
 0  10..18  BOLD
 0  18..21  DarkGray
 1   0..59  Indexed(231) on Indexed(25) BOLD
 1  60..70  Green
 1  70..71  DarkGray
 2   0..10  Green
 2  10..11  DarkGray
 2  12..17  Green
 2  18..21  BOLD
 3   0..10  Green
 3  10..11  DarkGray
 3  12..17  Green
 3  18..21  BOLD
 4   0..10  Green
 4  10..11  DarkGray
 4  12..17  Green
 4  18..21  BOLD
 5   0..10  Green
 5  10..11  DarkGray
 5  12..17  Green
 5  18..21  BOLD
18   0..3   BOLD
18   3..6   DarkGray
18   6..13  Green
18  13..19  DarkGray
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  89..90  Cyan BOLD
